# simple_lanplay_server_mgr

./: CMakeLists.txt  README.md  main.cpp  server_list.txt
